Starting with the Pong game

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -72,8 +72,8 @@
       laser cannon by moving it horizontally across the bottom of the screen and firing at descending aliens. 
       The aim is to defeat five rows of eleven aliens—some versions feature different numbers—that move horizontally 
       back and forth across the screen as they advance towards the bottom of the screen. The player defeats an 
-      alien, and earns points, by shooting it with the laser cannon. As more aliens are defeated, the aliens' 
-      movement and the game's music both speed up. Defeating the aliens brings another wave that is more difficult, a loop 
+      alien, and earns points, by shooting it with the laser cannon. As more aliens are defeated, the aliens\' 
+      movement and the game\'s music both speed up. Defeating the aliens brings another wave that is more difficult, a loop 
       which can continue indefinitely. The aliens attempt to destroy the cannon by firing at it while they approach the bottom
       of the screen. If they reach the bottom, the alien invasion is successful and the game ends. A special "mystery ship" 
       will occasionally move across the top of the screen and award bonus points if destroyed. The laser cannon is 
